--- a/app/components/Sections/About/about.module.css
+++ b/app/components/Sections/About/about.module.css
@@ -26,7 +26,7 @@
 }
 
 .description p {
-  font-size: 1.875rem;
+  font-size: 1.5rem;
   line-height: 2.25rem;
   text-align: center;
 }
