--- a/app/components/Sections/Contact/contact.module.css
+++ b/app/components/Sections/Contact/contact.module.css
@@ -63,6 +63,10 @@
 }
 
 .formBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   padding: 1rem;
 }
@@ -83,6 +87,7 @@
   resize: none;
   border-bottom: 1px solid #b8ac9980;
   border-radius: 0;
+  font-size: 1rem;
 }
 
 .input:focus {
@@ -111,26 +116,25 @@
 }
 
 /* ======== Contact Info Section ========= */
-/* 
-.contactInfoBox{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 20rem;
-  padding: 2rem;
-  } 
-  */
 
 .contactInfoBox {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
-  height: 14rem;
-  padding: 1rem 2rem;
+  height: 15rem;
+  padding: 2rem;
+}
+
+.infoBox {
+  /* width: 100%; */
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
 }
 
 .contactHeader {
@@ -180,6 +184,15 @@
     padding: 0 3rem;
   }
 
+  .formBox{
+    align-items: flex-end;
+  }
+
+  .formBox form{
+    width: inherit;
+    max-width: 500px;
+  }
+
   .nameEmail {
     display: flex;
   }
@@ -188,7 +201,9 @@
     width: 200px;
   }
 
-  .contactInfoBox{
-    padding: 0 2rem;
+  .contactInfoBox {
+    padding: 3rem 2rem;
+    height: 20rem;
+    align-items: center;
   }
 }
